@@ -3,20 +3,11 @@
 set -e
 
 if [ "$1" = "configure" ]; then
-        # Ensure the old alternative is removed
-        update-alternatives --remove terminator /usr/bin/terminator || true
-        update-alternatives --remove x-terminal-emulator /usr/bin/terminator
         # Add an alternative for x-terminal-emulator
         update-alternatives --install /usr/bin/x-terminal-emulator \
-                x-terminal-emulator /usr/bin/terminator.wrapper 50 \
+                x-terminal-emulator /usr/bin/terminator 50 \
                 --slave /usr/share/man/man1/x-terminal-emulator.1.gz \
                 x-terminal-emulator.1.gz /usr/share/man/man1/terminator.1.gz
 fi
-
-for dname in `find /usr/share/doc/terminator/html*/_static/fonts/ -type d` /usr/share/doc/terminator/apidoc/_static/fonts/; do
-        if [ -d ${dname} ]; then
-                gunzip -f ${dname}/*.gz
-        fi
-done
 
 #DEBHELPER#
